--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "raw-loader": "^0.5.1",
     "react-dev-utils": "^0.5.2",
     "style-loader": "0.13.1",
+    "svg-inline-loader": "^0.7.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
